[gd_scene load_steps=4 format=3 uid="uid://cskx33f82a4k2"]

[ext_resource type="Script" path="res://scenes/ui/navui_content.gd" id="1_r0aao"]
[ext_resource type="Texture2D" uid="uid://buyteqwgehlxb" path="res://assets/icons/ui/nav_ui/delete.svg" id="2_kevsp"]
[ext_resource type="Texture2D" uid="uid://c3bufrngr00hn" path="res://assets/icons/ui/nav_ui/edit.svg" id="3_xre6h"]

[node name="Navui-contentRow" type="Control"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
mouse_filter = 1
script = ExtResource("1_r0aao")
metadata/navui_content_type = "row"

[node name="FileLink" type="Button" parent="."]
custom_minimum_size = Vector2(500, 60)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_right = -632.0
offset_bottom = 60.0
grow_horizontal = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "File_name"
flat = true
alignment = 0

[node name="DateModified" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = -30.0
offset_right = 158.0
offset_bottom = -2.0
grow_vertical = 0
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 15
text = "Last modified: "
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -182.0
offset_top = -30.0
offset_right = -58.0
offset_bottom = 30.0
grow_horizontal = 0
grow_vertical = 2
alignment = 1

[node name="DeleteBtn" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
mouse_filter = 1
icon = ExtResource("2_kevsp")
flat = true
expand_icon = true

[node name="RenameBtn" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
mouse_filter = 1
icon = ExtResource("3_xre6h")
flat = true
expand_icon = true

[connection signal="button_down" from="FileLink" to="." method="_on_file_link_button_down"]
[connection signal="button_down" from="HBoxContainer/DeleteBtn" to="." method="_on_delete_btn_button_down"]
[connection signal="button_down" from="HBoxContainer/RenameBtn" to="." method="_on_renamebtn_button_down"]
